--- a/.github/workflows/transform.yml
+++ b/.github/workflows/transform.yml
@@ -1,11 +1,9 @@
 name: Transform new JSON files
 
 on:
-  # 1) Se ejecuta en cualquier push que afecte la carpeta dialog_data
   push:
     paths:
       - 'dialog_data/**'
-  # 2) Permite ejecutarlo manualmente desde la pestaña "Actions"
   workflow_dispatch:
 
 jobs:
@@ -21,16 +19,18 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install  # si no tienes package.json con dependencias, omite
+        # Omitir si no tienes package.json ni dependencias
+        run: |
+          npm install
 
       - name: Run transform script
         run: node scripts/transform.js
 
-      # (Opcional) Si quieres que los cambios de tu script se suban al repo:
+      # (Opcional) Para commit/push de los cambios al repo
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Auto-transform dialog_data" || echo "No changes to commit"
+          git commit -m "Auto-transform new JSON" || echo "No changes"
           git push
