--- a/.github/workflows/transform.yml
+++ b/.github/workflows/transform.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        with:
+          persist-credentials: true  # Esto permite usar el GITHUB_TOKEN para push
 
       - name: Set up Node
         uses: actions/setup-node@v2
@@ -19,18 +21,17 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        # Omitir si no tienes package.json ni dependencias
-        run: |
-          npm install
+        run: npm install
 
       - name: Run transform script
         run: node scripts/transform.js
 
-      # (Opcional) Para commit/push de los cambios al repo
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Auto-transform new JSON" || echo "No changes"
+          git commit -m "Auto-transform new JSON" || echo "No changes to commit"
           git push
