--- a/.github/workflows/transform.yml
+++ b/.github/workflows/transform.yml
@@ -1,5 +1,6 @@
 name: Transform new JSON files
-
+permissions:
+  contents: write  # Asegura que el job tenga permisos de escritura
 on:
   push:
     paths:
@@ -13,7 +14,8 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
-          persist-credentials: true  # Esto permite usar el GITHUB_TOKEN para push
+          token: ${{ secrets.PAT_TOKEN }}  # Usa el PAT con permisos adecuados
+          persist-credentials: false
 
       - name: Set up Node
         uses: actions/setup-node@v2
@@ -21,17 +23,16 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run transform script
         run: node scripts/transform.js
 
       - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          # Solo añadimos los archivos procesados para evitar cambios en otros archivos
+          git add dialog_data_processed
           git commit -m "Auto-transform new JSON" || echo "No changes to commit"
-          git push
+          git push origin HEAD:$(git rev-parse --abbrev-ref HEAD)
