--- a/.github/workflows/transform.yml
+++ b/.github/workflows/transform.yml
@@ -1,6 +1,7 @@
 name: Transform new JSON files
 permissions:
-  contents: write  # Asegura que el job tenga permisos de escritura
+  contents: write
+
 on:
   push:
     paths:
@@ -14,7 +15,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.PAT_TOKEN }}  # Usa el PAT con permisos adecuados
+          token: ${{ secrets.PAT_TOKEN }}
           persist-credentials: false
 
       - name: Set up Node
@@ -23,7 +24,7 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run transform script
         run: node scripts/transform.js
@@ -32,7 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          # Solo añadimos los archivos procesados para evitar cambios en otros archivos
           git add dialog_data_processed
           git commit -m "Auto-transform new JSON" || echo "No changes to commit"
           git push origin HEAD:$(git rev-parse --abbrev-ref HEAD)
