--- a/.github/workflows/transform.yml
+++ b/.github/workflows/transform.yml
@@ -12,7 +12,7 @@ jobs:
   transform:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - name: Check out repository
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT_TOKEN }}
@@ -30,9 +30,13 @@ jobs:
         run: node scripts/transform.js
 
       - name: Commit and push changes
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add dialog_data_processed
           git commit -m "Auto-transform new JSON" || echo "No changes to commit"
+          # Actualiza la URL remota para incluir el token
+          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/momentitocafecito/MandaTuVideo.git
           git push origin HEAD:$(git rev-parse --abbrev-ref HEAD)
