--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "my-dialog-app",
     "version": "1.0.0",
     "dependencies": {
-      "node-fetch": "^2.6.9"
+      "node-fetch": "^2.6.9",
+      "csv-parse": "^5.4.0",
+      "csv-stringify": "^6.3.0"
     }
   }
   
